# RoboticsTestTask

./: README.md
src/robot_client/: CMakeLists.txt  package.xml
src/robot_client/include/: robot_client.hpp
src/robot_client/src/: robot_client.cpp  robot_client_node.cpp
src/robots_interface_server/: CMakeLists.txt  package.xml
src/robots_interface_server/include/: robot_interface.hpp  robot_interface_topics.hpp
src/robots_interface_server/src/: position_control_node.cpp  robot_interface.cpp
