<?xml version="1.0"?>
<package format="2">
  <name>robot_client</name>
  <version>0.0.0</version>
  <description>The robot_client package</description>

  <maintainer email="stas.ponkrashov@gmail.com">staddy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robots_interface_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>robots_interface_server</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>robots_interface_server</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
